title size overflow fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,14 +63,14 @@ h1,
 h2,
 h3 {  
   font-family: var(--ff-title);
-  letter-spacing: 4px;
+  letter-spacing: 3px;
   line-height: 1.25;
   margin-bottom: 0.75rem;
   font-weight: 600;
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-transform: uppercase;
 }
 
